fix carousel stretch

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,9 @@ h1{
 .carousel-inner{
 	border-radius: 15px;
 }
-
+.carousel.slide img{
+	margin: 0 auto;
+}
 #cookie-row{
 	background-color: #353a40;
 	padding: 30px 20px;
